<?xml version="1.0" encoding="UTF-8"?>
<ui version="4.0">
 <class>mainWidget</class>
 <widget class="QWidget" name="mainWidget">
  <property name="geometry">
   <rect>
    <x>0</x>
    <y>0</y>
    <width>800</width>
    <height>600</height>
   </rect>
  </property>
  <property name="windowTitle">
   <string>mainWidget</string>
  </property>
  <layout class="QVBoxLayout" name="verticalLayout">
   <item>
    <widget class="QTabWidget" name="pTabWidget">
     <property name="currentIndex">
      <number>0</number>
     </property>
     <widget class="QWidget" name="pTabSocket">
      <attribute name="title">
       <string>Socket</string>
      </attribute>
      <layout class="QGridLayout" name="gridLayout"/>
     </widget>
     <widget class="QWidget" name="pTabSensor">
      <attribute name="title">
       <string>Sensor</string>
      </attribute>
     </widget>
     <widget class="QWidget" name="pTabSqlite">
      <attribute name="title">
       <string>Sqlite</string>
      </attribute>
     </widget>
    </widget>
   </item>
  </layout>
 </widget>
 <resources/>
 <connections/>
</ui>
